name:                   snap-hello-world
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/usethetypes/snap-hello-world#readme
license:                BSD3
license-file:           LICENSE
author:                 Richard Cook
maintainer:             richard@usethetypes.com
copyright:              2019 Richard Cook
category:               Command Line
build-type:             Simple
cabal-version:          >= 1.10
extra-source-files:     README.md

executable snap-hello-world
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  other-modules:
      App.Template
  build-depends:
      base >= 4.7 && < 5
    , ginger
    , snap-core
    , snap-server
    , text
    , transformers
